# checkloop

./: .checkloop-run.log.1  .checkloop-run.log.2  .checkloop-run.log.3  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
checks/: accessibility.md  api-design.md  architecture-boundaries.md  check-config.md  cleanup-ai-slop.md  coherence.md  commit-audit.md  complexity.md  concurrency-testing.md  concurrency.md  contributing-conformance.md  dead-code.md  deps.md  derived-values.md  docs-accuracy.md  docs.md  dry.md  edge-cases.md  errors.md  feature-flags.md  fixture-drift.md  idiomatic.md  logging.md  meta-review.md  migration-safety.md  observability.md  perf.md  rationale.md  readability.md  recurring-issues.md  schema-validation.md  secret-leakage.md  security.md  test-fix.md  test-validate.md  tests-for-diff.md  tests.md  types.md
execution_plans/: basic.toml  exhaustive.toml  super-exhaustive.toml  thorough.toml
prompt_templates/: commit_message_instructions.md  full_codebase_scope.md  hide_ai_attribution.md  progress_announcement.md  tests_for_behavior_changes.md
src/checkloop/: __init__.py  base_freshness.py  check_runner.py  checkpoint.py  checks.py  cli.py  cli_args.py  clone.py  commit_message.py  git.py  monitoring.py  power.py  process.py  project_map.py  project_rules.py  run_storage.py  streaming.py  suite.py  telemetry.py  terminal.py  tier_config.py
src/checkloop/tiers/: basic.toml  exhaustive.toml
src/claudeloop/: __init__.py  cli.py
tests/: conftest.py  helpers.py  test_base_freshness.py  test_check_runner.py  test_checkpoint.py  test_checkpoint_validation.py  test_checks.py  test_cli.py  test_cli_args.py  test_clone.py  test_commit_message.py  test_edge_cases.py  test_edge_cases_boundary.py  test_git.py  test_git_changes.py  test_git_line_counting.py  test_monitoring.py  test_mypy.py  test_power.py  test_process.py  test_process_streaming.py  test_project_map.py  test_project_rules.py  test_run_storage.py  test_streaming.py  test_streaming_buffer.py  test_suite.py  test_suite_memory.py  test_suite_state.py  test_telemetry.py  test_terminal.py  test_tier_config.py
