[project]
name = "claudeloop"
version = "0.1.0"
description = "Autonomous multi-pass code review using Claude Code"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Alexander Marquardt", email = "alexander.marquardt@gmail.com" },
]
readme = "README.md"
keywords = ["claude", "code-review", "ai", "automation", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/alexander-marquardt/claudeloop"
Repository = "https://github.com/alexander-marquardt/claudeloop"
Issues = "https://github.com/alexander-marquardt/claudeloop/issues"
Blog = "https://alexmarquardt.com/ai-tools/claudeloop-autonomous-code-review/"

[project.scripts]
claudeloop = "claudeloop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudeloop"]
