[project]
name = "checkloop"
version = "0.1.0"
description = "Autonomous multi-check code review using Claude Code"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Alexander Marquardt", email = "alexander.marquardt@gmail.com" },
]
readme = "README.md"
keywords = ["code-review", "ai", "automation", "claude-code", "linting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/alexander-marquardt/checkloop"
Repository = "https://github.com/alexander-marquardt/checkloop"
Issues = "https://github.com/alexander-marquardt/checkloop/issues"
Blog = "https://alexmarquardt.com/ai-tools/checkloop-autonomous-code-review/"

[project.scripts]
checkloop = "checkloop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]

[tool.mypy]
strict = true
mypy_path = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/checkloop"]
artifacts = ["*.toml"]
